# Practica4

./: CMakeLists.txt  main.c
dyn/: dyn_app_common.c  dyn_app_motors.c  dyn_app_motors.h  dyn_app_sensor.c  dyn_app_sensor.h  dyn_frames.c  dyn_instr.c  dyn_instr.h
dyn_test/: dyn_emu.c  dyn_emu.h
hal_dyn_uart/: hal_dyn_uart_emu.c
